objects/Prize_Winner__c.object
<CustomObject>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Continental</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>JetBlue</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>US Airways</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <inlineHelpText>platinum arrival = 3/16/11.  regular = 3/17/11</inlineHelpText>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bookings__c</fullName>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contest__c</fullName>
        <label>Contest</label>
        <referenceTo>Contest__c</referenceTo>
        <relationshipLabel>Prize Winners</relationshipLabel>
        <relationshipName>Prize_Winners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deals__c</fullName>
        <label>Deals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <inlineHelpText>standard = 3/20/11</inlineHelpText>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dials__c</fullName>
        <label>Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flight_Confirmation__c</fullName>
        <label>Flight Confirmation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flight_Cost__c</fullName>
        <label>Flight Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guest_Airline__c</fullName>
        <label>Guest Airline</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Continental</fullName>
                </value>
                <value>
                    <fullName>Delta</fullName>
                </value>
                <value>
                    <fullName>JetBlue</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>US AIrways</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guest_Arrival_Date__c</fullName>
        <label>Guest Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest_Birthdate__c</fullName>
        <label>Guest Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest_Confirmation__c</fullName>
        <label>Guest Confirmation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Departure_Date__c</fullName>
        <label>Guest Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest_First_Name__c</fullName>
        <label>Guest First Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Flight_Cost__c</fullName>
        <label>Guest Flight Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guest_Gender__c</fullName>
        <label>Guest Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guest_Last_Name__c</fullName>
        <label>Guest Last Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Outbound_Flight_Arrival__c</fullName>
        <label>Guest Outbound Flight Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Guest_Outbound_Flight_Depature__c</fullName>
        <label>Guest Outbound Flight Depature</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Guest_Outbound_Flight_Number__c</fullName>
        <label>Guest Outbound Flight Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Passport_Expiration_Date__c</fullName>
        <label>Guest Passport Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest_Passport_Number__c</fullName>
        <label>Guest Passport Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Return_Airport__c</fullName>
        <label>Guest Return Airport</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_Return_Flight_Arrival__c</fullName>
        <label>Guest Return Flight Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Guest_Return_Flight_Depature__c</fullName>
        <label>Guest Return Flight Depature</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Guest_Return_Flight_Number__c</fullName>
        <label>Guest Return Flight Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_T_Shirt_Size__c</fullName>
        <label>Guest T-Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>x-small</fullName>
                </value>
                <value>
                    <fullName>small</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>large</fullName>
                </value>
                <value>
                    <fullName>x-large</fullName>
                </value>
                <value>
                    <fullName>xx-large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Included_in_Commission_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in Commission Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launches__c</fullName>
        <label>Launches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outbound_Airport__c</fullName>
        <label>Outbound Airport</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Flight_Arrival__c</fullName>
        <label>Outbound Flight Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outbound_Flight_Depature__c</fullName>
        <label>Outbound Flight Depature</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outbound_Flight_Number__c</fullName>
        <label>Outbound Flight Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport_Expiration_Date__c</fullName>
        <label>Passport Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <label>Passport Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_To_Goal__c</fullName>
        <label>Percent To Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platinum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prez_Club_Type__c</fullName>
        <label>Prez Club Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exec</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>National-Platinum</fullName>
                </value>
                <value>
                    <fullName>Local-Platinum</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>IMS</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Rookie</fullName>
                </value>
                <value>
                    <fullName>Wild Card</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prize_Value__c</fullName>
        <label>Prize Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prize_Won__c</fullName>
        <label>Prize Won</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <label>Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Airport__c</fullName>
        <label>Return Airport</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Flight_Arrival__c</fullName>
        <label>Return Flight Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Return_Flight_Depature__c</fullName>
        <label>Return Flight Depature</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Return_Flight_Number__c</fullName>
        <label>Return Flight Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room_Type__c</fullName>
        <label>Room-Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUP-King</fullName>
                </value>
                <value>
                    <fullName>SUP-DBL</fullName>
                </value>
                <value>
                    <fullName>SUP-King-Concierge</fullName>
                </value>
                <value>
                    <fullName>SUP-DBL-Concierge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesrep_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesrep Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Prize_Winners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TalkTime__c</fullName>
        <label>TalkTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>AZ-Teitelman</fullName>
                </value>
                <value>
                    <fullName>AZ-Venneri</fullName>
                </value>
                <value>
                    <fullName>BOS-Albee</fullName>
                </value>
                <value>
                    <fullName>BOS-Gross</fullName>
                </value>
                <value>
                    <fullName>BOS-Williams</fullName>
                </value>
                <value>
                    <fullName>CLT-Eaton</fullName>
                </value>
                <value>
                    <fullName>CLT-Pirrone</fullName>
                </value>
                <value>
                    <fullName>National-Sherry</fullName>
                </value>
                <value>
                    <fullName>National-Zang</fullName>
                </value>
                <value>
                    <fullName>NYC-Defina</fullName>
                </value>
                <value>
                    <fullName>NYC-Depatria</fullName>
                </value>
                <value>
                    <fullName>NYC-Rosner</fullName>
                </value>
                <value>
                    <fullName>PHL</fullName>
                </value>
                <value>
                    <fullName>ALL North</fullName>
                </value>
                <value>
                    <fullName>ALL South</fullName>
                </value>
                <value>
                    <fullName>ALL National</fullName>
                </value>
                <value>
                    <fullName>Customer Promo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Flight_Costs__c</fullName>
        <formula>Guest_Flight_Cost__c + Flight_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Flight Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>guest_outbound_airport__c</fullName>
        <label>guest outbound airport</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tshirt_Size__c</fullName>
        <label>T-Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>x-small</fullName>
                </value>
                <value>
                    <fullName>small</fullName>
                </value>
                <value>
                    <fullName>medium</fullName>
                </value>
                <value>
                    <fullName>large</fullName>
                </value>
                <value>
                    <fullName>x-large</fullName>
                </value>
                <value>
                    <fullName>xx-large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>tracks winning people/teams from sales contests</description>
    <label>Prize Winner</label>
    <nameField>
        <displayFormat>{YY} - {MM} - {000}</displayFormat>
        <label>Prize Winner ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prize Winners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>President_s_Club</fullName>
        <active>true</active>
        <description>specific for President's Club info</description>
        <label>President's Club</label>
    </recordTypes>
    <recordTypes>
        <fullName>master</fullName>
        <active>true</active>
        <label>master</label>
    </recordTypes>
</CustomObject>